--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/UlisesOrnelasR/code_challenge#readme",
   "devDependencies": {
+    "eslint": "^8.15.0",
     "jest": "^26.0.0"
   }
 }
